# project2023

./: .gitignore  CODEOWNERS  Makefile  README.md  ToDo.txt  log.txt  received_2024-04-09_10-27-12.txt
Baseband_QPSK/: backscatter.pio  backscatter_QPSK_4cls.pio  backscatter_QPSK_8cls.pio
ExperimentalLog/: 100cm.txt  200.txt  250.txt  300.txt  300cm26042023.txt
SR4-G4/: log10m.txt  log15m.txt  log20.txt  log25m.txt  log27m.txt  log5m.txt  log6m.txt  log7m.txt  log8m.txt
baseband/: CMakeLists.txt  README.md  backscatter.pio  decrement_test.pio  generate-backscatter-pio.py  generate-rf-config.py  main.c  main.cpp  main.old.c  main.old2.c  template_rf_config.xml  test  test2
baseband/python_pio_test_compiler/: CMakeCache.txt  README.md  example.ipynb  generate_python_script.py  main.ipynb  pyproject.toml  scratch_pad.ipynb  test.pio  test2.pio
carrier-CC2500/: README.md  main.c
carrier-Firefly/: README.md
carrier-characteristics/: README.md
carrier-receiver-CC1312/: README.md
carrier-receiver-CC1352/: README.md
carrier-receiver-baseband/: CMakeLists.txt  README.md  backscatter.pio  carrier-sweep-test_results_log.txt  default.txt  generate-backscatter-pio.py  horro.sh  main.c  main_without_hamming.c  received_2023-03-28_19-52-23.txt  received_2023-03-30_11-00-18.txt  received_2023-04-11_11-30-00.txt  received_2023-04-12_20-06-40.txt
hardware/: README.md
oqpsk-rust/: README.md
project_pico_libs/: backscatter.c  backscatter.h  carrier_CC2500.c  carrier_CC2500.h  cc13xx_lrm_m2.c  cc13xx_lrm_m2.h  packet_generation.c  packet_generation.h  walsh.c  walsh.h  (+3 more)
(+459 files in other folders)
