[tool.poetry]
package-mode = false
name = "python-pio-test-compiler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pydantic = "^2.7.1"
plotly = "^5.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
